# mp4als

./: .gitignore  CMakeLists.txt  Makefile  diff_rm16_rm16fixed.txt  mp4als.dsp  mp4als.dsw  mp4als.ncb  mp4als.opt  mp4als.plg  mp4als.sln  mp4als.vcproj  mp4als_vc6.dsp  mp4als_vc7.vcproj  mp4als_vc8.vcproj  mp4als_vc9.vcproj  readme.txt
Release/: BuildLog.htm  audiorw.sbr  cmdline.sbr  crc.sbr  decoder.sbr  ec.sbr  encoder.sbr  floating.sbr  lms.sbr  lpc.sbr  mcc.sbr  mlz.sbr  mp4als.bsc  mp4als.pch  mp4als.sbr  rn_bitio.sbr  vc60.idb  vc70.idb  wave.sbr
src/: Makefile  als2mp4.cpp  als2mp4.h  audiorw.cpp  audiorw.h  bitio.h  cmdline.cpp  cmdline.h  crc.cpp  crc.h  decoder.cpp  decoder.h  ec.cpp  ec.h  encoder.cpp  encoder.h  floating.cpp  floating.h  lms.cpp  lms.h  lpc.cpp  lpc.h  lpc_adapt.h  mcc.cpp  mcc.h  mlz.cpp  mp4als.cpp  rn_bitio.cpp  rn_bitio.h  wave.cpp  wave.h
src/AlsImf/: ImfBox.cpp  ImfBox.h  ImfBoxAmd1.cpp  ImfBoxAmd1.h  ImfDescriptor.cpp  ImfDescriptor.h  ImfFileStream.cpp  ImfFileStream.h  ImfSampleEntry.cpp  ImfSampleEntry.h  ImfStream.h  ImfType.h  Makefile
src/AlsImf/Mp4/: Mp4Box.cpp  Mp4Box.h  Mp4aFile.cpp  Mp4aFile.h
